Menu / Codestarter / Testimonials

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,6 +329,28 @@ body {
 .button-container {
   text-align: center; }
 
+.small.button {
+  text-transform: uppercase;
+  font-family: "proxima-nova-soft", "proxima-nova-condensed", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-weight: 600;
+  font-size: 1.125em;
+  line-height: 36px;
+  height: 36px;
+  padding: 0 1em;
+  display: inline-block;
+  border-radius: 3px; }
+
+.medium.button {
+  text-transform: uppercase;
+  font-family: "proxima-nova-soft", "proxima-nova-condensed", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.5em;
+  line-height: 48px;
+  height: 48px;
+  padding: 0 1em;
+  display: inline-block;
+  border-radius: 5px; }
+
 .button.big {
   text-transform: uppercase;
   font-family: "proxima-nova-soft", "proxima-nova-condensed", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
@@ -345,6 +367,15 @@ body {
   background: #0b8c41; }
   .button.green:hover {
     background: #097436; }
+
+.button.white {
+  color: #6c7173;
+  background: white; }
+  .button.white:hover {
+    background: #f2f2f2; }
+
+#wrapper {
+  margin-top: 50px; }
 
 header {
   height: 600px;
@@ -368,6 +399,7 @@ header {
     top: 50%;
     width: 250px;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
     display: block; }
     header #logo img {
       width: 100%;
@@ -379,6 +411,7 @@ header {
     left: 50%;
     top: 50%;
     width: 1200px;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     display: block; }
     header #date-place > div {
@@ -389,6 +422,33 @@ header {
         float: left; }
       header #date-place > div#conf-date {
         float: right; }
+
+nav#main {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 50px;
+  background: #264159;
+  z-index: 999999999; }
+  nav#main ul {
+    margin: 0;
+    padding: 0;
+    text-align: center; }
+    nav#main ul:after {
+      content: "";
+      display: table;
+      clear: both; }
+    nav#main ul li {
+      display: inline-block; }
+      nav#main ul li a {
+        display: block;
+        line-height: 50px;
+        height: 50px;
+        padding: 0 20px;
+        font-size: "proxima-nova-soft", "proxima-nova-condensed", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+        text-transform: uppercase;
+        color: #fff; }
 
 #the-bar {
   background: #1f3447;
@@ -422,7 +482,7 @@ header {
         line-height: 30px;
         padding: 0;
         background: #20b9f1;
-        color: #2e4e6b;
+        color: white;
         text-transform: uppercase;
         font-size: 1.125em;
         font-weight: 600;
@@ -444,6 +504,37 @@ section#about {
     font-weight: 300;
     color: #666;
     text-align: center; }
+
+section#quote-bar {
+  background: #6c7173;
+  padding: 50px 0; }
+  section#quote-bar .container {
+    position: relative; }
+    section#quote-bar .container .avatar {
+      width: 100px;
+      height: 100px;
+      float: left;
+      background: #3b3d3e;
+      border-radius: 100%; }
+    section#quote-bar .container p {
+      margin: 0;
+      font-size: 1.5em;
+      line-height: 1.2em;
+      font-weight: 500;
+      font-family: "proxima-nova-soft", "proxima-nova-condensed", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+      color: #fff;
+      position: absolute;
+      left: 140px;
+      right: 240px;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      -o-transform: translateY(-50%);
+      transform: translateY(-50%); }
+    section#quote-bar .container #more-quotes {
+      float: right;
+      margin: 30px 0 0; }
 
 section.intro {
   background: #2e4e6b;
@@ -472,8 +563,8 @@ section.content {
   #speakers .content .speaker-list .speaker {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
-    width: 48.821174201%; }
+    margin-right: 5%;
+    width: 47.5%; }
     #speakers .content .speaker-list .speaker:last-child {
       margin-right: 0; }
     #speakers .content .speaker-list .speaker:nth-child(2n) {
@@ -491,8 +582,8 @@ section.content {
       #speakers .content .speaker-list .speaker > div .img {
         float: left;
         display: block;
-        margin-right: 4.8291579146%;
-        width: 30.1138947236%; }
+        margin-right: 10.5263157895%;
+        width: 26.3157894737%; }
         #speakers .content .speaker-list .speaker > div .img:last-child {
           margin-right: 0; }
         #speakers .content .speaker-list .speaker > div .img figure {
@@ -528,8 +619,8 @@ section.content {
       #speakers .content .speaker-list .speaker > div .text {
         float: left;
         display: block;
-        margin-right: 4.8291579146%;
-        width: 65.0569473618%; }
+        margin-right: 10.5263157895%;
+        width: 63.1578947368%; }
         #speakers .content .speaker-list .speaker > div .text:last-child {
           margin-right: 0; }
         #speakers .content .speaker-list .speaker > div .text h3 {
@@ -570,13 +661,14 @@ section.content {
     #venue .content #venue-photos li {
       float: left;
       display: block;
-      width: 34.1192171993%;
+      width: 35%;
       width: 33% !important;
       background-size: cover;
+      background-repeat: no-repeat;
       overflow: hidden;
       height: 300px; }
       #venue .content #venue-photos li:last-child {
-        width: 31.7615656014%; }
+        width: 30%; }
       #venue .content #venue-photos li:nth-child(3n) {
         margin-right: 0; }
       #venue .content #venue-photos li:nth-child(3n+1) {
@@ -589,29 +681,124 @@ section.content {
     width: 100%;
     height: 500px; }
 
+#quotes .content .quotes {
+  display: block; }
+  #quotes .content .quotes:after {
+    content: "";
+    display: table;
+    clear: both; }
+  #quotes .content .quotes .quote {
+    float: left;
+    display: block;
+    margin-right: 5%;
+    width: 47.5%; }
+    #quotes .content .quotes .quote:last-child {
+      margin-right: 0; }
+    #quotes .content .quotes .quote:nth-child(2n) {
+      margin-right: 0; }
+    #quotes .content .quotes .quote:nth-child(2n+1) {
+      clear: left; }
+    #quotes .content .quotes .quote > div {
+      padding: 40px;
+      position: relative;
+      display: block; }
+      #quotes .content .quotes .quote > div:after {
+        content: "";
+        display: table;
+        clear: both; }
+      #quotes .content .quotes .quote > div .text {
+        margin-left: 40px;
+        padding: 20px 30px;
+        background: #e6e6e6;
+        position: relative;
+        font-size: 1.125em;
+        border-radius: 5px;
+        border-bottom-left-radius: 0px;
+        margin-bottom: 50px; }
+        #quotes .content .quotes .quote > div .text:after {
+          width: 30px;
+          height: 30px;
+          background: url(../quote.svg) no-repeat left top;
+          background-size: 100%;
+          position: absolute;
+          bottom: -30px;
+          left: 0;
+          content: ""; }
+      #quotes .content .quotes .quote > div .person .avatar {
+        background: #ccc;
+        border-radius: 100%;
+        width: 80px;
+        height: 80px;
+        float: left;
+        margin: 0;
+        vertical-align: middle; }
+      #quotes .content .quotes .quote > div .person .name {
+        margin: 0;
+        vertical-align: middle;
+        margin-left: 30px;
+        float: left;
+        vertical-align: middle;
+        line-height: 80px;
+        font-size: 1.25em;
+        color: #6c7173; }
+
+#codestarter .columns {
+  display: block;
+  margin-bottom: 60px; }
+  #codestarter .columns:after {
+    content: "";
+    display: table;
+    clear: both; }
+  #codestarter .columns .column {
+    float: left;
+    display: block;
+    margin-right: 5%;
+    width: 47.5%; }
+    #codestarter .columns .column:last-child {
+      margin-right: 0; }
+    #codestarter .columns .column h2 {
+      margin-bottom: 1em; }
+    #codestarter .columns .column h3 {
+      margin-bottom: 1em; }
+#codestarter .photos:after {
+  content: "";
+  display: table;
+  clear: both; }
+#codestarter .photos figure {
+  float: left;
+  width: 25%;
+  margin: 0;
+  background-size: cover;
+  background-repeat: no-repeat; }
+  #codestarter .photos figure span {
+    display: block;
+    width: 100%;
+    padding-top: 66%;
+    position: relative; }
+
 footer {
   background: #1f3447;
   padding: 60px 0; }
   footer .about-us {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
-    width: 48.821174201%;
+    margin-right: 5%;
+    width: 47.5%;
     padding-right: 50px; }
     footer .about-us:last-child {
       margin-right: 0; }
   footer .learn-more {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
-    width: 23.2317613015%; }
+    margin-right: 5%;
+    width: 21.25%; }
     footer .learn-more:last-child {
       margin-right: 0; }
   footer .stay-onnected {
     float: left;
     display: block;
-    margin-right: 2.3576515979%;
-    width: 23.2317613015%; }
+    margin-right: 5%;
+    width: 21.25%; }
     footer .stay-onnected:last-child {
       margin-right: 0; }
   footer h4 {
