--- a/assets/css/base/_grid-settings.scss
+++ b/assets/css/base/_grid-settings.scss
@@ -7,8 +7,15 @@
 // $max-width: em(1088);
 
 // Neat Breakpoints
-$medium-screen: em(640);
-$large-screen: em(860);
+$mobile-screen:   em(640);
+$portrait-screen: em(1023);
+$tablet-screen:   em(1024);
+$desktop-screen:  em(1200);
+$big-screen:  	  em(1320);
 
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+$mobile:    new-breakpoint(max-width $mobile-screen 4);
+$portrait:  new-breakpoint(min-width $mobile-screen max-width $portrait-screen 12);
+$tablet:    new-breakpoint(min-width $tablet-screen max-width $desktop-screen 12);
+$desktop:   new-breakpoint(min-width $desktop-screen 12);
+$big:   		new-breakpoint(min-width $big-screen 12);
+
